Changelog
=========

4.0b3 - unreleased
------------------

- Made tests compatible with Windows.
  [hannosch]

- Added support for specifying new RelStorage options cache-local-mb,
  cache-delta-size-limit, commit-lock-timeout and commit-lock-id.
  [hannosch]

4.0b2 - 2010-06-23
------------------

- Added a new dependency on ``mailinglogger`` and expose it as a convenient
  new option.
  [hannosch]

- Removed testing dependency on ``zope.testing`` and refactored test setup.
  [hannosch]

4.0b1 - 2010-04-04
------------------

- The recipe could sometimes fail to build twice if no zcml option was given.
  This closes http://dev.plone.org/plone/ticket/10296.
  [hannosch]

4.0a4 - 2010-02-04
------------------

- Removed commented out options from the http-server section.
  [hannosch]

- Added new ``enable-product-installation`` option and let it default to off.
  [hannosch]

4.0a3 - 2010-01-24
------------------

- Tried to restore the Windows service functionality, getting closer but not
  there yet all the way.
  [hannosch]

- Use the same quoting approach for the console as for fg command on Windows.
  [hannosch]

- Don't call zopectl.quote_command(), since the added outer double quotes caused
  subprocess.call() to fail with "WindowsError: [Error 87] The parameter is
  incorrect". Instead, hand roll the quoting (save outer quotes).
  [kleist]

- Un-hardcoded ':' as path separator, caused "ImportError: No module named
  Zope2.Startup" on Windows. See http://dev.plone.org/plone/ticket/9991.
  [kleist]

- Removed the import directory from the skeleton. You can place import files
  into the import directory in the client home in new Zope 2 versions.
  [hannosch, davisagli]

- Make it possible to omit the user option, in which case buildout will ask
  for a user and password, when a new instance is created.
  [hannosch]

- Use our own make instance script and skeletons, only providing what we
  really need anymore.
  [hannosch]
